<?xml version="1.0"?>
<package format="3">
  <name>open3d_demo</name>
  <version>0.0.0</version>
  <description>open3d_demo</description>
  <maintainer email="ben.greenberg@swri.org">Ben Greenberg</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

